<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".FormCadastroActivity">
<TextView
    android:id="@+id/title_tela_cadastro"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txt_tela_cadastro"
    android:textSize="50sp"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:layout_marginTop="100dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/containerComponentsCadastre"
        style="@style/ContainerComponentCadastre"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_tela_cadastro" />

    <EditText
        android:id="@+id/nome_cadastrese"
        style="@style/edit_text"
        android:hint="Nome"
        app:layout_constraintTop_toTopOf="@id/containerComponentsCadastre"
        app:layout_constraintStart_toStartOf="@id/containerComponentsCadastre"
        app:layout_constraintEnd_toEndOf="@id/containerComponentsCadastre"/>

    <EditText
        android:id="@+id/email_cadastrese"
        style="@style/edit_text"
        android:layout_marginTop="16dp"
        android:drawableRight="@drawable/ic_email"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/nome_cadastrese"
        app:layout_constraintStart_toStartOf="@id/nome_cadastrese"
        app:layout_constraintTop_toBottomOf="@id/nome_cadastrese" />

    <EditText
        android:id="@+id/senha_cadastrese"
        style="@style/edit_text"
        android:layout_marginTop="16dp"
        android:drawableRight="@drawable/ic_eye"
        android:hint="Senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/email_cadastrese"
        app:layout_constraintStart_toStartOf="@id/email_cadastrese"
        app:layout_constraintTop_toBottomOf="@id/email_cadastrese" />

    <CheckBox
        android:id="@+id/checkBoxPersonal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:text="@string/btn_personal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senha_cadastrese" />

    <CheckBox
        android:id="@+id/checkBoxAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:minHeight="48dp"
        android:text="@string/btn_aluno"
        app:layout_constraintStart_toEndOf="@+id/checkBoxPersonal"
        app:layout_constraintTop_toBottomOf="@+id/senha_cadastrese" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cadastrese"
        style="@style/St_Button"
        android:layout_width="200dp"
        android:layout_marginTop="30dp"
        android:text="@string/txt_btn_cadastrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/containerComponentsCadastre" />


</androidx.constraintlayout.widget.ConstraintLayout>